--- a/首页_2.html
+++ b/首页_2.html
@@ -478,24 +478,27 @@
                 <p><span>了解更多</span></p>
               </div>
             </div>
-          </div>
 
-          <!-- Unnamed (矩形) -->
-          <div id="u1730" class="ax_default box_1">
-            <img id="u1730_img" class="img " src="images/首页_2/u1730.png"/>
+            <!-- 页面标题 (矩形) -->
+            <div id="u1730" class="ax_default _默认样式" data-label="页面标题">
+              <img id="u1730_img" class="img " src="images/首页/页面标题_u882.png"/>
+              <div id="u1730_text" class="text ">
+                <p><span>我的首页（管理员）</span></p>
+              </div>
+            </div>
           </div>
 
           <!-- Unnamed (矩形) -->
           <div id="u1731" class="ax_default box_1">
-            <img id="u1731_img" class="img " src="images/首页_2/u1719.png"/>
-            <div id="u1731_text" class="text ">
-              <p><span>概览</span></p>
-            </div>
+            <img id="u1731_img" class="img " src="images/首页_2/u1731.png"/>
           </div>
 
-          <!-- Unnamed (形状) -->
-          <div id="u1732" class="ax_default icon">
-            <img id="u1732_img" class="img " src="images/首页_2/u1732.png"/>
+          <!-- Unnamed (矩形) -->
+          <div id="u1732" class="ax_default box_1">
+            <img id="u1732_img" class="img " src="images/首页_2/u1719.png"/>
+            <div id="u1732_text" class="text ">
+              <p><span>概览</span></p>
+            </div>
           </div>
 
           <!-- Unnamed (形状) -->
@@ -513,54 +516,54 @@
             <img id="u1735_img" class="img " src="images/首页_2/u1735.png"/>
           </div>
 
-          <!-- Unnamed (矩形) -->
-          <div id="u1736" class="ax_default box_1">
+          <!-- Unnamed (形状) -->
+          <div id="u1736" class="ax_default icon">
             <img id="u1736_img" class="img " src="images/首页_2/u1736.png"/>
-            <div id="u1736_text" class="text ">
+          </div>
+
+          <!-- Unnamed (矩形) -->
+          <div id="u1737" class="ax_default box_1">
+            <img id="u1737_img" class="img " src="images/首页_2/u1737.png"/>
+            <div id="u1737_text" class="text ">
               <p><span>35篇文章</span></p>
             </div>
           </div>
 
           <!-- Unnamed (矩形) -->
-          <div id="u1737" class="ax_default box_1">
-            <img id="u1737_img" class="img " src="images/首页_2/u1736.png"/>
-            <div id="u1737_text" class="text ">
+          <div id="u1738" class="ax_default box_1">
+            <img id="u1738_img" class="img " src="images/首页_2/u1737.png"/>
+            <div id="u1738_text" class="text ">
               <p><span>896个用户</span></p>
             </div>
           </div>
 
           <!-- Unnamed (矩形) -->
-          <div id="u1738" class="ax_default box_1">
-            <img id="u1738_img" class="img " src="images/首页_2/u1736.png"/>
-            <div id="u1738_text" class="text ">
+          <div id="u1739" class="ax_default box_1">
+            <img id="u1739_img" class="img " src="images/首页_2/u1737.png"/>
+            <div id="u1739_text" class="text ">
               <p><span>13个页面</span></p>
             </div>
           </div>
 
           <!-- Unnamed (矩形) -->
-          <div id="u1739" class="ax_default box_1">
-            <img id="u1739_img" class="img " src="images/首页_2/u1736.png"/>
-            <div id="u1739_text" class="text ">
+          <div id="u1740" class="ax_default box_1">
+            <img id="u1740_img" class="img " src="images/首页_2/u1737.png"/>
+            <div id="u1740_text" class="text ">
               <p><span>658条评论</span></p>
             </div>
           </div>
 
           <!-- Unnamed (矩形) -->
-          <div id="u1740" class="ax_default box_1">
-            <img id="u1740_img" class="img " src="images/首页_2/u1730.png"/>
-          </div>
-
-          <!-- Unnamed (矩形) -->
           <div id="u1741" class="ax_default box_1">
-            <img id="u1741_img" class="img " src="images/首页_2/u1719.png"/>
-            <div id="u1741_text" class="text ">
-              <p><span>快速草稿</span></p>
-            </div>
+            <img id="u1741_img" class="img " src="images/首页_2/u1731.png"/>
           </div>
 
           <!-- Unnamed (矩形) -->
           <div id="u1742" class="ax_default box_1">
-            <img id="u1742_img" class="img " src="images/首页_2/u1742.png"/>
+            <img id="u1742_img" class="img " src="images/首页_2/u1719.png"/>
+            <div id="u1742_text" class="text ">
+              <p><span>快速草稿</span></p>
+            </div>
           </div>
 
           <!-- Unnamed (矩形) -->
@@ -571,107 +574,104 @@
           <!-- Unnamed (矩形) -->
           <div id="u1744" class="ax_default box_1">
             <img id="u1744_img" class="img " src="images/首页_2/u1744.png"/>
-            <div id="u1744_text" class="text ">
+          </div>
+
+          <!-- Unnamed (矩形) -->
+          <div id="u1745" class="ax_default box_1">
+            <img id="u1745_img" class="img " src="images/首页_2/u1745.png"/>
+            <div id="u1745_text" class="text ">
               <p><span>在想什么？</span></p>
             </div>
           </div>
 
           <!-- Unnamed (矩形) -->
-          <div id="u1745" class="ax_default sticky_1">
-            <img id="u1745_img" class="img " src="images/首页_2/u1745.png"/>
-            <div id="u1745_text" class="text ">
+          <div id="u1746" class="ax_default sticky_1">
+            <img id="u1746_img" class="img " src="images/首页_2/u1746.png"/>
+            <div id="u1746_text" class="text ">
               <p><span>保存草稿</span></p>
             </div>
           </div>
-        </div>
 
-        <!-- Unnamed (矩形) -->
-        <div id="u1746" class="ax_default box_1">
-          <img id="u1746_img" class="img " src="images/首页_2/u1746.png"/>
-        </div>
-
-        <!-- Unnamed (矩形) -->
-        <div id="u1747" class="ax_default box_1">
-          <img id="u1747_img" class="img " src="images/首页_2/u1747.png"/>
-          <div id="u1747_text" class="text ">
-            <p><span>活动</span></p>
+          <!-- Unnamed (矩形) -->
+          <div id="u1747" class="ax_default box_1">
+            <img id="u1747_img" class="img " src="images/首页_2/u1747.png"/>
+            <div id="u1747_text" class="text ">
+              <p><span>标题</span></p>
+            </div>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
         <div id="u1748" class="ax_default box_1">
           <img id="u1748_img" class="img " src="images/首页_2/u1748.png"/>
-          <div id="u1748_text" class="text ">
-            <p><span>2018-12-2</span></p>
-          </div>
         </div>
 
         <!-- Unnamed (矩形) -->
         <div id="u1749" class="ax_default box_1">
-          <img id="u1749_img" class="img " src="images/首页_2/u1748.png"/>
+          <img id="u1749_img" class="img " src="images/首页_2/u1749.png"/>
           <div id="u1749_text" class="text ">
-            <p><span>文章：世界，你好</span></p>
+            <p><span>活动</span></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
         <div id="u1750" class="ax_default box_1">
-          <img id="u1750_img" class="img " src="images/首页_2/u1748.png"/>
+          <img id="u1750_img" class="img " src="images/首页_2/u1750.png"/>
           <div id="u1750_text" class="text ">
-            <p><span>2018-11-29</span></p>
+            <p><span>2018-12-2</span></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
         <div id="u1751" class="ax_default box_1">
-          <img id="u1751_img" class="img " src="images/首页_2/u1748.png"/>
+          <img id="u1751_img" class="img " src="images/首页_2/u1750.png"/>
           <div id="u1751_text" class="text ">
-            <p><span>文章：报纸的余香</span></p>
+            <p><span>文章：世界，你好</span></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
         <div id="u1752" class="ax_default box_1">
-          <img id="u1752_img" class="img " src="images/首页_2/u1748.png"/>
+          <img id="u1752_img" class="img " src="images/首页_2/u1750.png"/>
           <div id="u1752_text" class="text ">
-            <p><span>2018-11-28</span></p>
+            <p><span>2018-11-29</span></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
         <div id="u1753" class="ax_default box_1">
-          <img id="u1753_img" class="img " src="images/首页_2/u1748.png"/>
+          <img id="u1753_img" class="img " src="images/首页_2/u1750.png"/>
           <div id="u1753_text" class="text ">
-            <p><span>文章：乌合之众&nbsp; &nbsp; </span></p>
+            <p><span>文章：报纸的余香</span></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
         <div id="u1754" class="ax_default box_1">
-          <img id="u1754_img" class="img " src="images/首页_2/u1754.png"/>
+          <img id="u1754_img" class="img " src="images/首页_2/u1750.png"/>
+          <div id="u1754_text" class="text ">
+            <p><span>2018-11-28</span></p>
+          </div>
         </div>
 
         <!-- Unnamed (矩形) -->
         <div id="u1755" class="ax_default box_1">
-          <img id="u1755_img" class="img " src="images/首页_2/u1755.png"/>
+          <img id="u1755_img" class="img " src="images/首页_2/u1750.png"/>
           <div id="u1755_text" class="text ">
-            <p><span>最近发布</span></p>
+            <p><span>文章：乌合之众&nbsp; &nbsp; </span></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
         <div id="u1756" class="ax_default box_1">
           <img id="u1756_img" class="img " src="images/首页_2/u1756.png"/>
-          <div id="u1756_text" class="text ">
-            <p><span>全部（100）</span></p>
-          </div>
         </div>
 
         <!-- Unnamed (矩形) -->
         <div id="u1757" class="ax_default box_1">
           <img id="u1757_img" class="img " src="images/首页_2/u1757.png"/>
           <div id="u1757_text" class="text ">
-            <p><span>待审（0）</span></p>
+            <p><span>最近发布</span></p>
           </div>
         </div>
 
@@ -679,7 +679,7 @@
         <div id="u1758" class="ax_default box_1">
           <img id="u1758_img" class="img " src="images/首页_2/u1758.png"/>
           <div id="u1758_text" class="text ">
-            <p><span>已批准（1）</span></p>
+            <p><span>全部（100）</span></p>
           </div>
         </div>
 
@@ -687,14 +687,30 @@
         <div id="u1759" class="ax_default box_1">
           <img id="u1759_img" class="img " src="images/首页_2/u1759.png"/>
           <div id="u1759_text" class="text ">
-            <p><span>回收站（20）</span></p>
+            <p><span>待审（0）</span></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
         <div id="u1760" class="ax_default box_1">
-          <img id="u1760_img" class="img " src="images/首页_1/u1243.png"/>
+          <img id="u1760_img" class="img " src="images/首页_2/u1760.png"/>
           <div id="u1760_text" class="text ">
+            <p><span>已批准（1）</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (矩形) -->
+        <div id="u1761" class="ax_default box_1">
+          <img id="u1761_img" class="img " src="images/首页_2/u1761.png"/>
+          <div id="u1761_text" class="text ">
+            <p><span>回收站（20）</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (矩形) -->
+        <div id="u1762" class="ax_default box_1">
+          <img id="u1762_img" class="img " src="images/首页_1/u1243.png"/>
+          <div id="u1762_text" class="text ">
             <p><span>查看更多</span></p>
           </div>
         </div>
